--- a/LabPortfolio_FridayHITT_CF_Template.yaml
+++ b/LabPortfolio_FridayHITT_CF_Template.yaml
@@ -6,6 +6,6 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: t2.micro  # Choose the instance type (e.g., t2.micro)
-      KeyName: my-key  # Replace with your EC2 key pair name
+      KeyName: StormHawker_FridayHITT  # Replace with your EC2 key pair name
       ImageId: ami-00385a401487aefa4  # Replace with a valid AMI ID for your region
       Region: eu-west-1
