--- a/LabPortfolio_FridayHITT_CF_Template.yaml
+++ b/LabPortfolio_FridayHITT_CF_Template.yaml
@@ -4,7 +4,7 @@ Resources:
   FridayHITTVPC:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: 10.0.0.0/16
+      CidrBlock: 10.0.0.0/16 #Need to change this IP Address
       EnableDnsSupport: true
       EnableDnsHostnames: true
 
@@ -13,7 +13,7 @@ Resources:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
-        - Key: Name
+        - Key: Name #This can be DEV,QA, WEB etc
           Value: FridayHITTInternetGateway
 
   FridayHITTAttachGateway:
@@ -27,10 +27,8 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref FridayHITTVPC
-      CidrBlock: 10.0.1.0/24
-      AvailabilityZone: !Select
-        - 0
-        - !GetAZs ''
+      CidrBlock: 10.0.1.0/24 #Need to change this IP Address
+      AvailabilityZone: !Select [0, !GetAZs '']
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name #Enter your Key Name
@@ -41,10 +39,8 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref FridayHITTVPC
-      CidrBlock: 10.0.2.0/24
-      AvailabilityZone: !Select
-        - 0
-        - !GetAZs ''
+      CidrBlock: 10.0.2.0/24 #Need to change this IP Address
+      AvailabilityZone: !Select [0, !GetAZs '']
       Tags:
         - Key: Name
           Value: PrivateSubnet
@@ -57,6 +53,7 @@ Resources:
       KeyName: StormHawker_FridayHITT # Replace with your actual key pair name
       ImageId: ami-00385a401487aefa4 # Replace with a valid AMI ID for your region
       Region: eu-west-1
+      Subnetid: !Ref FridayHITTPublicSubnet
 
   # Defining the Private EC2 instance, Yet to add it under Private Subnet
   FridayHITTPrivateEC2Instance:
@@ -67,3 +64,4 @@ Resources:
       KeyName: StormHawker_FridayHITT # Replace with your EC2 key pair name
       ImageId: ami-00385a401487aefa4 # Replace with a valid AMI ID for your region
       Region: eu-west-1
+      Subnetid: !Ref FridayHITTPrivateSubnet
