--- a/LabPortfolio_FridayHITT_CF_Template.yaml
+++ b/LabPortfolio_FridayHITT_CF_Template.yaml
@@ -52,8 +52,7 @@ Resources:
       InstanceType: t2.micro
       KeyName: StormHawker_FridayHITT # Replace with your actual key pair name
       ImageId: ami-00385a401487aefa4 # Replace with a valid AMI ID for your region
-      Region: eu-west-1
-      Subnetid: !Ref FridayHITTPublicSubnet
+      SubnetId: !Ref FridayHITTPublicSubnet
 
   # Defining the Private EC2 instance, Yet to add it under Private Subnet
   FridayHITTPrivateEC2Instance:
@@ -63,5 +62,45 @@ Resources:
       InstanceType: t2.micro # Choose the instance type (e.g., t2.micro)
       KeyName: StormHawker_FridayHITT # Replace with your EC2 key pair name
       ImageId: ami-00385a401487aefa4 # Replace with a valid AMI ID for your region
-      Region: eu-west-1
-      Subnetid: !Ref FridayHITTPrivateSubnet
+      SubnetId: !Ref FridayHITTPrivateSubnet
+
+# Security Group for Public EC2 Instance
+FridayHITTPublicEC2InstanceSecurityGroup:
+  Type: AWS::EC2::SecurityGroup
+  Properties:
+    GroupDescription: Public instance security group allowing External communication
+    VpcId: !Ref FridayHITTVPC
+    SecurityGroupIngress:
+      - IpProtocol: tcp
+        FromPort: 22
+        ToPort: 22
+        CidrIp: 0.0.0.0/0  # anywhere from IPv4
+      - IpProtocol: tcp
+        FromPort: 80
+        ToPort: 80
+        CidrIp: 0.0.0.0/0  # anywhere from IPv4
+      - IpProtocol: tcp
+        FromPort: 443
+        ToPort: 443
+        CidrIp: 0.0.0.0/0  # anywhere from IPv4
+  
+# Security Group for Private EC2 Instance
+FridayHITTPrivateEC2InstanceSecurityGroup:
+  Type: AWS::EC2::SecurityGroup
+  Properties:
+    GroupDescription: Private instance security group allowing Internal communication
+    VpcId: !Ref FridayHITTVPC
+    SecurityGroupIngress:
+      - IpProtocol: tcp
+        FromPort: 22
+        ToPort: 22
+        CidrIp: 0.0.0.0/0  # anywhere from IPv4 - Yet to be associated with Jumbox
+
+
+
+
+
+
+
+
+
