chore: added security group ids for all instances

--- a/LabPortfolio_FridayHITT_CF_Template.yaml
+++ b/LabPortfolio_FridayHITT_CF_Template.yaml
@@ -53,6 +53,7 @@ Resources:
       KeyName: StormHawker_FridayHITT # Replace with your actual key pair name
       ImageId: ami-00385a401487aefa4 # Replace with a valid AMI ID for your region
       SubnetId: !Ref FridayHITTPublicSubnet
+      SecurityGroupIds: FridayHITTPublicEC2InstanceSecurityGroup
       Tags:
         - Key: Name
           Value: FridayHITTPublicEC2Instance
@@ -65,6 +66,7 @@ Resources:
       KeyName: StormHawker_FridayHITT # Replace with your EC2 key pair name
       ImageId: ami-00385a401487aefa4 # Replace with a valid AMI ID for your region
       SubnetId: !Ref FridayHITTPrivateSubnet
+      SecurityGroupIds: FridayHITTPrivateEC2InstanceSecurityGroup
       Tags:
         - Key: Name
           Value: FridayHITTPrivateEC2Instance
@@ -77,6 +79,7 @@ Resources:
       KeyName: StormHawker_FridayHITT # Replace with your EC2 key pair name
       ImageId: ami-00385a401487aefa4 # Replace with a valid AMI ID for your region
       SubnetId: !Ref FridayHITTPublicSubnet
+      SecurityGroupIds: FridayHITTJumpBoxEC2InstanceSecurityGroup
       Tags:
         - Key: Name
           Value: FridayHITTJumpBoxEC2Instance
