--- a/LabPortfolio_FridayHITT_CF_Template.yaml
+++ b/LabPortfolio_FridayHITT_CF_Template.yaml
@@ -220,3 +220,42 @@ Resources:
     Properties:
       SubnetId: !Ref FridayHITTPrivateSubnet
       RouteTableId: !Ref FridayHITTPrivateRouteTable
+
+############################################################################################################################
+
+Outputs:
+  VPCID:
+    Description: VPC ID
+    Value: !Ref FridayHITTVPC
+   
+  PublicInstanceIP:
+    Description: Public Instance IP Address
+    Value: !GetAtt FridayHITTPublicEC2Instance.PublicIp
+ 
+  PrivateInstanceIP:
+    Description: Private Instance IP Address
+    Value: !GetAtt FridayHITTPrivateEC2Instance.PrivateIp
+ 
+  JumpboxInstanceIP:
+    Description: Jumpbox Instance IP Address
+    Value: !GetAtt FridayHITTJumpBoxEC2Instance.PublicIp
+ 
+  PublicSubnet1ID:
+    Description: Public Subnet ID
+    Value: !Ref FridayHITTPublicSubnet
+ 
+  PrivateSubnet1ID:
+    Description: Private Subnet 1 ID
+    Value: !Ref FridayHITTPrivateSubnet
+ 
+  JumpboxSGID:
+    Description: Jumpbox Security Group ID
+    Value: !Ref FridayHITTJumpBoxEC2InstanceSecurityGroup
+ 
+  PublicSGID:
+    Description: Public Security Group ID
+    Value: !Ref FridayHITTPublicEC2InstanceSecurityGroup
+ 
+  PrivateSGID:
+    Description: Private Security Group ID
+    Value: !Ref FridayHITTPrivateEC2InstanceSecurityGroup
